# StryxLib-OLD

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  StryxLib.sln
StryxLib.C/: CMakeLists.txt  StryxLib.C.vcxitems  StryxLib.C.vcxitems.filters  io.h  mem.h  stdlib.h  time.h
StryxLib.C/Headers/: stdlib.h
StryxLib.C/Sources/: stdlib.c
StryxLib.CXX/: CMakeLists.txt  StryxLib.CXX.vcxitems  StryxLib.CXX.vcxitems.filters  stdlib.hpp
StryxLib.CXX/Headers/: stdlib.hpp
StryxLib.CXX/Sources/: stdlib.cpp
StryxLib.JS/: StryxLib.JS.njsproj  package.json
StryxLib.JVM/StryxLib/: build.gradle.kts  settings.gradle.kts
StryxLib.Linux.C/: StryxLib.Linux.C.vcxproj  StryxLib.Linux.C.vcxproj.filters
StryxLib.Linux.CXX/: StryxLib.Linux.CXX.vcxproj  StryxLib.Linux.CXX.vcxproj.filters
StryxLib.NET/: Logger.cs  Runtime.cs  StryxLib.NET.csproj
StryxLib.NET.ASP/: Runtime.cs  Services.cs  StryxLib.NET.ASP.csproj
StryxLib.NET/Extensions/: DirectoryInfoExtensions.cs  FileInfoExtensions.cs  IEnumberableExtensions.cs  ProcessExtensions.cs  StringExtensions.cs  TypeExtensions.cs
StryxLib.NET/Files/: FileIO.cs  FileSystem.cs
StryxLib.NET/Machine/Hardware/CPU/: HW_CPU.cs
StryxLib.NET/Machine/Hardware/GPU/: HW_GPU.cs
StryxLib.NET/Machine/Hardware/Motherboard/: ACPI.cs  HW_Motherboard.cs  UEFI.cs
StryxLib.NET/Machine/Hardware/RAM/: HW_RAM.cs  SPD.cs
StryxLib.NET/Machine/System/: OperatingSystem.cs
StryxLib.NT.C/: StryxLib.NT.C.vcxproj
StryxLib.NT.CXX/: StryxLib.NT.CXX.vcxproj
StryxLib.TS/: StryxLib.TS.njsproj  package-lock.json  package.json  tsconfig.json
(+6 files in other folders)
